# qr-code-generation

./: .gitignore  Makefile  README.md  pyproject.toml
src/: main.py
src/qr_code_generation/api/: qr_routes.py
src/qr_code_generation/core/: generator.py
